--- a/style.css
+++ b/style.css
@@ -1,22 +1,163 @@
-.box {
-  --c:red;   /* color */
-  --b:2px;   /* thickness of lines */
-  --o1:15px; /* offest of lines*/
-  --o2:10px; /* offset of rectangle */
+:root {
+    --brass: #b6a644;
+    --martini-glass__color: rgba(255, 255, 255, 0.3);
+    --martini-glass__size: 60px;
+    --vodka__color: rgba(255, 255, 255, 0.6);
+    --vodka__size: 45px;
+    --olive__color: #808000;
+    --olive__size: 13px;
+    --olive__top: -47px;
+    --olive__right: 0;
+    --toothpick__color: #f2804d;
+    --toothpick__width: 1px;
+    --toothpick__height: 20px;
+    --martini-glass-stem__width: 4px;
+    --martini-glass-stem__height: 70px;
+    --martini-glass-stand__size: 15px;
+    --fill__duration: 3s;
+    --fill__delay: 0.5s;
+    --bobber__duration: 5s;
+    --bobber__delay: 3.5s;
+}
 
-  width:auto;
-  height:auto;
-  box-sizing:border-box;
-  display:inline-block;
-  border:var(--o1) solid transparent;
-  outline:var(--b) solid var(--c);
-  outline-offset:calc(-1*var(--o2));
-  background:
-    linear-gradient(var(--c) 0 0) top,
-    linear-gradient(var(--c) 0 0) left,
-    linear-gradient(var(--c) 0 0) bottom,
-    linear-gradient(var(--c) 0 0) right;
-  background-size:200% var(--b),var(--b) 200%;
-  background-origin:padding-box;
-  background-repeat:no-repeat;
+@font-face {
+    font-family: "Tabac";
+    src: url("TabacGlam.otf");
+}
+
+body {
+    background: #000;
+    color: var(--brass);
+    font-family: "Tabac", sans-serif;
+    text-align: center;
+    border: 3px solid var(--brass);
+
+    margin: 3vh 2vh;
+    /*height: calc(100vh - 46px);*/
+    /*display: flex;*/
+    /*flex-direction: column;*/
+    /*align-items: center;*/
+    /*justify-content: flex-start;*/
+    /*padding: 1.5vh;*/
+}
+
+body:after {
+    content: "";
+    /*margin: 20px;*/
+    border: 3px solid var(--brass);
+    /*display: block;*/
+    position: fixed;
+    /*margin: 3vh 2vh;*/
+
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+
+.artdeco-box {
+    --c: var(--brass); /* color */
+    --b: 2px; /* thickness of lines */
+    --o1: 15px; /* offest of lines*/
+    --o2: 10px; /* offset of rectangle */
+
+    padding: 1rem;
+    width: auto;
+    height: auto;
+    box-sizing: border-box;
+    display: inline-block;
+    border: var(--o1) solid transparent;
+    outline: var(--b) solid var(--c);
+    outline-offset: calc(-1 * var(--o2));
+    background: linear-gradient(var(--c) 0 0) top, linear-gradient(var(--c) 0 0) left,
+    linear-gradient(var(--c) 0 0) bottom, linear-gradient(var(--c) 0 0) right;
+    background-size: 200% var(--b), var(--b) 200%;
+    background-origin: padding-box;
+    background-repeat: no-repeat;
+}
+
+.main {
+    display: flex;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+}
+
+.button {
+    text-transform: uppercase;
+    letter-spacing: 0.4em;
+    font-size: 1em;
+    position: relative;
+    text-decoration: none;
+    padding: 0.5em;
+    box-shadow: inset 0 0 0 1px #e0c351;
+    min-width: 340px;
+    text-align: center;
+}
+.button__label {
+    display: block;
+    background-color: transparent;
+    color: #e0c351;
+    padding: 1.5em 2em;
+    transition: color 500ms ease, background-color 500ms ease;
+}
+.button:hover .button__label, .button:focus .button__label {
+    color: #000;
+    background-color: rgba(224, 195, 81, 0.9);
+}
+.button__ornament {
+    position: absolute;
+}
+.button__ornament--vertical {
+    top: -0.5em;
+    bottom: -0.5em;
+    left: 0;
+    right: 0;
+}
+.button__ornament--horisontal {
+    left: -0.5em;
+    right: -0.5em;
+    top: 0;
+    bottom: 0;
+}
+.button__ornament-top-bottom, .button__ornament-left-right {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+}
+.button__ornament-top-bottom:before, .button__ornament-top-bottom:after, .button__ornament-left-right:before, .button__ornament-left-right:after {
+    content: "";
+    position: absolute;
+    background-color: #e0c351;
+    transition: transform 400ms cubic-bezier(0.54, 0.06, 0.39, 0.96);
+}
+.button__ornament-top-bottom:before, .button__ornament-top-bottom:after {
+    height: 1px;
+    left: 0;
+    right: 0;
+}
+.button__ornament-top-bottom:before {
+    top: 0;
+}
+.button__ornament-top-bottom:after {
+    bottom: 0;
+}
+.button__ornament-left-right:before, .button__ornament-left-right:after {
+    width: 1px;
+    top: 0;
+    bottom: 0;
+}
+.button__ornament-left-right:before {
+    left: 0;
+}
+.button__ornament-left-right:after {
+    right: 0;
+}
+.button:hover .button__ornament-left-right:before, .button:hover .button__ornament-left-right:after, .button:focus .button__ornament-left-right:before, .button:focus .button__ornament-left-right:after {
+    transform: scale(1, 0);
+}
+.button:hover .button__ornament-top-bottom:before, .button:hover .button__ornament-top-bottom:after, .button:focus .button__ornament-top-bottom:before, .button:focus .button__ornament-top-bottom:after {
+    transform: scale(0, 1);
 }
