--- a/style.css
+++ b/style.css
@@ -1,58 +1,29 @@
-:root {
-    --brass: #b6a644;
-    --martini-glass__color: rgba(255, 255, 255, 0.3);
-    --martini-glass__size: 60px;
-    --vodka__color: rgba(255, 255, 255, 0.6);
-    --vodka__size: 45px;
-    --olive__color: #808000;
-    --olive__size: 13px;
-    --olive__top: -47px;
-    --olive__right: 0;
-    --toothpick__color: #f2804d;
-    --toothpick__width: 1px;
-    --toothpick__height: 20px;
-    --martini-glass-stem__width: 4px;
-    --martini-glass-stem__height: 70px;
-    --martini-glass-stand__size: 15px;
-    --fill__duration: 3s;
-    --fill__delay: 0.5s;
-    --bobber__duration: 5s;
-    --bobber__delay: 3.5s;
-}
-
 @font-face {
     font-family: "Tabac";
     src: url("TabacGlam.otf");
 }
 
 body {
+    --brass: #b6a644;
     background: #000;
     color: var(--brass);
     font-family: "Tabac", sans-serif;
     text-align: center;
-    border: 3px solid var(--brass);
 
-    margin: 3vh 2vh;
-    /*height: calc(100vh - 46px);*/
-    /*display: flex;*/
-    /*flex-direction: column;*/
-    /*align-items: center;*/
-    /*justify-content: flex-start;*/
-    /*padding: 1.5vh;*/
+    border: 3px solid var(--brass);
+    margin: 3vh 1vh;
+    height: 97%;
 }
 
 body:after {
     content: "";
-    /*margin: 20px;*/
     border: 3px solid var(--brass);
-    /*display: block;*/
-    position: fixed;
-    /*margin: 3vh 2vh;*/
+    position: absolute;
 
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+    top: 1vh;
+    left: 3vh;
+    right: 3vh;
+    z-index: -1;
 }
 
 .artdeco-box {
